revert fill color to be chosen by code and not css, fix bug when text is too big - maybe whe could set overflow hidden later

--- a/src/main/resources/css/styleGameScene.css
+++ b/src/main/resources/css/styleGameScene.css
@@ -20,13 +20,12 @@
 }
 
 .rectangle{
-    -fx-fill: White;
     -fx-stroke: #206020;
     -fx-stroke-width: 2;
 }
 
 .label{
-    -fx-font: bold 15pt "Arial";
+    -fx-font: bold 1.2em "Arial";
     -fx-text-fill: #206020;
 }
 
